maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:24: error: not found: value initialisee
  if (virages == 0 && initialisee) {
                      ^