maze.pledge.PledgeMaze.scala.code
var virages = 0
var intitialisee = false

def murAGauche():Boolean = {
  
  var res = false
  gauche()
  res = estFaceMur()
  droite()
  return res 
  
}

def fonceAuNord() {
  
  setDirection(Direction.NORD)
  while (!estFaceMur()) {avance()}
  
}

def longerMurGauche() {
  
  if (virages == 0 && initialisee) {
    
    fonceAuNord()
    
  }
  
  if (murAGauche()) {
    
    if (estFaceMur()) {
      
      droite()
      virages = virages - 1
      return
    
    } else {
      
      avance()
      
    }
    
  } else {
      
    	gauche()
    	virages = virages + 1
      avance()
    
  }
  
}


override def run() {
  
  while (!estSurBiscuit()) {
    
    longerMurGauche()
    
  }
  
  prendBiscuit()
  
}